[gd_scene load_steps=7 format=3 uid="uid://2dwibevu7ne7"]

[ext_resource type="Script" uid="uid://b4kn4yeeplfhp" path="res://blackjack/rougelike_blackjack.gd" id="1_b22ve"]
[ext_resource type="Script" uid="uid://di1kob85cvgt1" path="res://blackjack/blackjack_card_hand.gd" id="4_b22ve"]
[ext_resource type="Script" uid="uid://cn33b5sd6cnt6" path="res://blackjack/blackjack_deck_manager.gd" id="4_jnrdv"]
[ext_resource type="Resource" uid="uid://tfmqvl885cor" path="res://blackjack/player_blackjack_deck.tres" id="5_jnrdv"]
[ext_resource type="Script" uid="uid://bbi8i6vef3f6y" path="res://addons/simple_cards/hand/card_hand.gd" id="5_x71mc"]
[ext_resource type="Script" uid="uid://wn30x7o3f47m" path="res://addons/milestone/scripts/achievements/achievement_notifier.gd" id="6_sm6pw"]

[node name="RougelikeBlackjack" type="CanvasLayer"]
script = ExtResource("1_b22ve")

[node name="CardDeckManager" type="Node" parent="."]
physics_interpolation_mode = 2
script = ExtResource("4_jnrdv")
starting_deck = ExtResource("5_jnrdv")
metadata/_custom_type_script = "uid://bisyk4bowdvsf"

[node name="Draw" type="Control" parent="CardDeckManager"]
layout_mode = 3
anchors_preset = 0
offset_left = 100.0
offset_top = 70.0
offset_right = 100.0
offset_bottom = 70.0

[node name="Discards" type="Control" parent="CardDeckManager"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 70.0
offset_right = -140.0
offset_bottom = 70.0
grow_horizontal = 0

[node name="CardHand" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 230.0
offset_right = -1.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_b22ve")
max_selected = 5
card_spacing = 70.0
max_hand_size = 7
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="DealerHand" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -350.0
offset_bottom = -350.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_x71mc")
shape = 0
card_spacing = 90.0
enable_reordering = false
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2

[node name="GoldButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Turn Gold"

[node name="SilvButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Turn Silver"

[node name="NoneButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Turn None"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -66.0
offset_right = 67.0
offset_bottom = 66.0
grow_vertical = 2

[node name="DiscardButton" type="Button" parent="VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Discard"

[node name="PlayButton" type="Button" parent="VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Play"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.5
offset_top = -64.0
offset_right = 105.5
grow_horizontal = 2
grow_vertical = 0

[node name="SortSuitButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Sort by Suit"

[node name="SortValueButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "Sort by Value"

[node name="AchievementNotifier" type="Node" parent="."]
script = ExtResource("6_sm6pw")
metadata/_custom_type_script = "uid://wn30x7o3f47m"
